# SunTracker

./: .gitignore  Cargo.toml  main.rs
backend/: Cargo.toml  data.rs  main.rs
frontend/: Cargo.toml  index.html
