[package]
name = "SunTracker"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
table-extract = "0.2.3"
reqwest = "0.12.12"
tokio = {version = "1", features = ["full"]}
axum = "0.8.1"
tower-http = {version = "0.6.2", features = ["fs"]}
lazy_static = "1.5.0"

[[bin]]
name = "SunTracker"
path = "main.rs"
